RESOLVED FIXED230232
[LFC][IFC] InlineDisplayContentBuilder should not operate on the global inline run list
https://bugs.webkit.org/show_bug.cgi?id=230232
Summary [LFC][IFC] InlineDisplayContentBuilder should not operate on the global inlin...
alan
Reported 2021-09-13 14:11:01 PDT
It only builds one line worth of runs.
Attachments
Patch (16.61 KB, patch)
2021-09-13 14:20 PDT, alan
no flags
alan
Comment 1 2021-09-13 14:20:57 PDT
EWS
Comment 2 2021-09-14 06:19:13 PDT
Committed r282386 (241647@main): <https://commits.webkit.org/241647@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438076 [details].
Radar WebKit Bug Importer
Comment 3 2021-09-14 06:20:18 PDT
Note You need to log in before you can comment on or make changes to this bug.